feat: generic repository pattern classes with ef core

--- a/Travel-Company.WPF/Travel-Company.WPF.csproj
+++ b/Travel-Company.WPF/Travel-Company.WPF.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <Folder Include="Resources\Images\" />
+    <Folder Include="Services\Employees\" />
   </ItemGroup>
 
   <ItemGroup>
